--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   </head>
   <style>
     #maimg {
@@ -36,10 +37,11 @@
       margin-bottom: 15px;
     }
     #maintext {
+      font-size: 4rem;
       transition: 0.3s ease;
     }
     #maintext:hover {
-      font-size: 3rem;
+      font-size: 4.5rem;
       transition: 0.3s ease;
     }
     #profile {
@@ -99,6 +101,118 @@
     .feature-icon-small {
       width: 3rem;
       height: 3rem;
+    }
+
+    :root {
+      --box: 150px; /* change cube size */
+      ---box: -150px; /* keep Subtraction change cube size */
+      --boxhalf: 75px; /* change cube size */
+      ---boxhalf: -75px; /* keep Subtraction change cube size */
+      --colorWheel: 20deg; /*change cube color*/
+    }
+    .mainConteinerx {
+      
+      -webkit-text-stroke: 2px black;
+      z-index: -999;
+      cursor: default;
+      transform-style: preserve-3d;
+      transform: translate(-50%, -50%) rotateX(50deg) rotateY(0deg)
+        rotateZ(30deg);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+    }
+    .containerx {
+      width: max-content;
+      height: max-content;
+      display: grid;
+      grid-template-columns: auto auto auto auto auto auto;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+      transform-style: preserve-3d;
+      gap: 1px;
+    }
+
+    .main {
+      width: var(--box);
+      height: var(--box);
+      transform-style: preserve-3d;
+      /*   transform: rotateX(90deg); */
+    }
+
+    .main::after {
+      content: "";
+      width: 100%;
+      position: absolute;
+      height: 100%;
+      background: linear-gradient(90deg, black, transparent);
+      transform: translateZ(var(---boxhalf)) translateX(100%);
+      filter: blur(5px);
+    }
+
+    .box {
+      perspective: 500px;
+      width: var(--box);
+      height: var(--box);
+      background: rgba(0, 0, 0, 0.2);
+      position: absolute;
+      transform-style: preserve-3d;
+      backface-visibility: visible;
+      -web-backface-visibility: visible;
+      color: #fff;
+      display: grid;
+      place-items: center;
+    }
+
+    .top {
+      transform: translateY(var(--boxhalf)) rotateX(90deg);
+      background: hsl(var(--colorWheel), 100%, 30%);
+    }
+
+    .right {
+      transform: translateX(var(--boxhalf)) rotateY(90deg);
+      background: hsl(var(--colorWheel), 100%, 20%);
+    }
+
+    .bottom {
+      transform: translateY(var(---boxhalf)) rotateX(-90deg);
+      background: hsl(var(--colorWheel), 100%, 30%);
+    }
+
+    .left {
+      transform: translateX(-var(---boxhalf)) rotateY(-90deg);
+      background: hsl(var(--colorWheel), 100%, 35%);
+    }
+
+    .front {
+      transform: translateZ(var(--boxhalf));
+      background: hsl(var(--colorWheel), 100%, 50%);
+      font-size: 120px;
+      font-family: fantasy;
+      color: #ffffff;
+      font-weight: 400;
+    }
+
+    .back {
+      transform: translateZ(var(---boxhalf)) rotateY(180deg);
+      background: hsl(var(--colorWheel), 100%, 20%);
+    }
+    #food {
+      height: 70vh;
+    }
+    #cfg {
+      padding-top: 15%;
+-webkit-text-stroke: 1px rgba(255, 255, 255, 0.7);
+      border-radius: 8px;
+      background: linear-gradient(360deg, rgba(255, 255, 255, 0.5), transparent);
+    }
+    #exp {
+      font-size: 30px;
+      width: 50%;
+      height: 15%;
+    } #mainexp {
+      box-shadow: 0 0 50px rgba(0, 0, 0, 1);
     }
   </style>
   <body class="">
@@ -176,7 +290,9 @@
                     >
                   </li>
                   <li>
-                    <a href="/pages4.html" class="nav-link px-2 link-body-emphasis"
+                    <a
+                      href="/pages4.html"
+                      class="nav-link px-2 link-body-emphasis"
                       >P4</a
                     >
                   </li>
@@ -222,9 +338,24 @@
         </div>
       </header>
     </div>
+    <div class="animate__animated animate__fadeInUp overflow-hidden p-3 p-md-5 m-md-3  text-center bg-body" id="mainexp">
+      <div class="p-lg-6 mx-atuo my-5" id="food" >
+        <div class="col-md-5 p-lg-5 mx-auto my-5 text-shadow-2" >
+          <h1 id="cfg" class="display-3 font-weight-normal text-dark">
+            ChiangMai Foodie Guide
+          </h1>
+          <a href="#mainrlly" rel="noopener noreferrer">
+            <button id="exp" class="btn btn-light" >Explorer</button>
+          </a>
+        </div>
+        <div class="mainConteinerx">
+          <div class="containerx"></div>
+        </div>
+      </div>
+    </div>
 
     <!-- BODYheros pages -->
-    <div class="container col-xxl-8 px-4 py-5">
+    <div class="container col-xxl-8 px-4 py-5" id="mainrlly">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div
           class="col-10 col-sm-8 col-lg-6 animate__animated animate__slideInUp"
@@ -238,7 +369,7 @@
           />
         </div>
         <div class="col-lg-6 animate__animated animate__slideInUp">
-          <h1 id="maintext" class="display-6 fw-bold lh-1 mb-3">
+          <h1 id="maintext" class="display-6 fw-bold lh-1 mb-1">
             ChiangMai Foodie Guide
           </h1>
           <p class="lead">
@@ -249,24 +380,6 @@
             - เราจะมาแนะนําเมนูอาหารยอดนิยมในเชียงใหม่ รับรองว่าถูกใจทั้งคน
             ท้องถิ่นและนักท่องเที่ยวแน่นอน
           </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="#b0dy"
-              ><button
-                type="button"
-                class="btn btn-primary btn-lg px-4 me-md-2"
-              >
-                Page Down
-              </button></a
-            >
-            <a href="#"
-              ><button
-                type="button"
-                class="btn btn-outline-secondary btn-lg px-4"
-              >
-                NONE
-              </button></a
-            >
-          </div>
         </div>
       </div>
     </div>
@@ -349,8 +462,22 @@
           </div>
         </div>
       </div>
+      <div class=" container px-4 py-5">
+        <h2 class="pb-2 border-bottom ">We Come From <a class="display-6" href="https://www.cmtc.ac.th" target="_blank" rel="noopener noreferrer">CMTC</a></h2>
+          <div class="col">
+            <div class="row row-cols-1 row-cols-sm-1 animate__animated animate__zoomInDown animate__delay-1s">
+              <div class="col d-flex flex-column gap-3 ">
+                <div
+                  class="d-inline-flex align-items-center justify-content-center text-bg-dark fs-4 rounded-3"
+                >
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.9615411197415!2d98.97554799999999!3d18.799867199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a9a71d80adf%3A0xe41f657fc5052416!2z4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmA4LiX4LiE4LiZ4Li04LiE4LmA4LiK4Li14Lii4LiH4LmD4Lir4Lih4LmI!5e0!3m2!1sth!2sth!4v1701429207030!5m2!1sth!2sth" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-
     <!-- end fet -->
     <!-- foro -->
     <foot-comp></foot-comp>
