--- a/pages4.html
+++ b/pages4.html
@@ -33,11 +33,14 @@
       }
      #food {
       -webkit-text-fill-color: white;
+      -webkit-text-stroke: 1px black;
      }
-     .text-purple {
+     .text-yellow {
       -webkit-text-fill-color: rgb(245, 241, 0);
-      -webkit-text-stroke: 2px black;
-      
+      -webkit-text-stroke: 1px black;
+     }
+     .btn {
+      -webkit-text-stroke: 0;
      }
     </style>
   </head>
@@ -170,7 +173,7 @@
     <div class="animate__animated animate__fadeInLeft  position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="background-image: url(https://image.bangkokbiznews.com/uploads/images/contents/w1024/2022/01/YzOKln4AIRA9uJ8onf7t.webp); background-size: cover; background-position: center;">
       <div class="col-md-5 p-lg-5 mx-auto my-5 " id="food">
         <h1 class="display-3 font-weight-normal text-light ">ข้าวซอยลำดวน<br>ฟ้าฮ่าม</h1>
-        <p class="display-5 font-weight-normal text-purple" >Local FOOD</p>
+        <p class="display-5 font-weight-normal text-yellow" >Local FOOD</p>
         <a class="btn btn-danger"  href="http://www.facebook.com/khaosoilamduan" target="_blank">Contact</a>
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
@@ -185,16 +188,25 @@
           <img src="https://img.wongnai.com/p/1920x0/2023/04/22/153918c45a214741918e684f43922f0a.jpg">
         </div>
       </div>
-      <div class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+      <div
+      class="bg-dark ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+      id="mdvideopart"
+    >
+      <div class="my-2 py-2">
+        <h2 class="display-4">Reviews</h2>
+        <iframe width="100%" height="450" src="https://www.youtube.com/embed/D1azC89eeJs?si=Ygrb6uypyX-Wzks_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </div>
+      <div class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden" id="mdtextpart">
         <div class="my-3 p-3">
           <h1 class="display-5 ">
             ChiangMai Foodie Guide
           </h1>
-          <p class="lead">
-            - ร้านข้าวซอยลำดวนฟ้าฮ่ามเชียงใหม่เป็นร้านอาหารเก่าแก่ระดับตำนานของเชียงใหม่ ก่อตั้งโดยคุณแม่ลำดวน ก่อเกียรติกุล เมื่อปี พ.ศ. 2486   <br />
-            ซึ่งเป็นช่วงสงครามโลกครั้งที่ 2 โดยคุณแม่ลำดวนได้นำเอาข้าวซอยน้ำซุปใสๆ ของชาวจีนฮ่อมาปรับเปลี่ยนให้เข้ากับรสนิยมคนไทยด้วยการคิดค้นสูตรน้ำกะทิแกงขึ้นเป็นเจ้าแรก <br />
+          <p class="lead font">
+            - ร้านข้าวซอยลำดวนฟ้าฮ่ามเชียงใหม่เป็นร้านอาหารเก่าแก่ระดับตำนานของเชียงใหม่ ก่อตั้งโดยคุณแม่ลำดวน ก่อเกียรติกุล เมื่อปี พ.ศ. 2486
+            ซึ่งเป็นช่วงสงครามโลกครั้งที่ 2 โดยคุณแม่ลำดวนได้นำเอาข้าวซอยน้ำซุปใสๆ ของชาวจีนฮ่อมาปรับเปลี่ยนให้เข้ากับรสนิยมคนไทยด้วยการคิดค้นสูตรน้ำกะทิแกงขึ้นเป็นเจ้าแรก 
             และได้รับความนิยมแพร่หลายจนกลายเป็นข้าวซอยแบบที่เราคุ้นเคยกันมาจนถึงทุกวันนี้ <br>
-            - ร้านข้าวซอยลำดวนฟ้าฮ่ามเชียงใหม่มีจุดเด่นอยู่ที่รสชาติน้ำกะทิแกงเข้มข้นหอมเครื่องเทศ เส้นข้าวซอยเหนียวนุ่ม และเครื่องเคียงที่จัดเต็ม ทั้งแคบหมู หอมแดงซอย ถั่วงอก ผักกาดดอง และผักชีฝรั่ง <br />
+            - ร้านข้าวซอยลำดวนฟ้าฮ่ามเชียงใหม่มีจุดเด่นอยู่ที่รสชาติน้ำกะทิแกงเข้มข้นหอมเครื่องเทศ เส้นข้าวซอยเหนียวนุ่ม และเครื่องเคียงที่จัดเต็ม ทั้งแคบหมู หอมแดงซอย ถั่วงอก ผักกาดดอง และผักชีฝรั่ง
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <a href="#b0dy"
