--- a/pages1.html
+++ b/pages1.html
@@ -158,14 +158,14 @@
     <div
       class="animate__animated animate__fadeInDown position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
       style="
-        background-image: url(https://scontent.fbkk13-2.fna.fbcdn.net/v/t39.30808-6/305628135_782223046169456_8704349101930243280_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEHJ69UzvYhB1I1Ac-97PIze9zEvG9sktx73MS8b2yS3BxCXzCDYwuiuZwe5zYdClM_m4_2Ao1vAXRa2owvQZro&_nc_ohc=pMMHcsByNsIAX8lm8qC&_nc_ht=scontent.fbkk13-2.fna&oh=00_AfBbJ4PWaZUieoeNf11AuZQnZnu2u3lYmEjnKt7EeLso2w&oe=656A6F50);
+        background-image: url(https://images.deliveryhero.io/image/fd-th/LH/d4ig-hero.jpg?width=4000&height=1000&quality=45);
         background-size: cover;
         background-position: center;
       "
     >
       <div class="col-md-5 p-lg-5 mx-auto my-5" id="food">
-        <h1 class="display-3 font-weight-normal">สุกี้ช้างเผือก</h1>
-        <p class="display-5 font-weight-normal">Street FOOD</p>
+        <h1 class="display-3 font-weight-normal text-white">สุกี้ช้างเผือก</h1>
+        <p class="display-5 font-weight-normal text-white">Street FOOD</p>
         <a
           class="btn btn-danger"
           href="https://web.facebook.com/Changphuaksuki/"
@@ -181,7 +181,7 @@
       id="mdpart"
     >
       <div
-        class="bg-dark ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+        class="bg-body ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden"
         id="mdimgpart"
       >
         <div class="my-2 py-2">
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div
-        class="bg-dark ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+        class="bg-body ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden"
         id="mdvideopart"
       >
         <div class="my-2 py-2">
@@ -214,7 +214,8 @@
       </div>
 
       <div
-        class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden" id="mdtextpart"
+        class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden"
+        id="mdtextpart"
       >
         <div class="my-3 p-3">
           <h1 class="display-5">ChiangMai Foodie Guide</h1>
