--- a/pages2.html
+++ b/pages2.html
@@ -184,7 +184,7 @@
       id="mdpart"
     >
       <div
-        class="bg-dark mr-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+        class="bg-body mr-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden"
         id="mdimgpart"
       >
         <div class="my-2 py-2">
@@ -198,7 +198,7 @@
         </div>
       </div>
       <div
-        class="bg-dark ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+        class="bg-body ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden"
         id="mdvideopart"
       >
         <div class="my-2 py-2">
@@ -215,7 +215,8 @@
         </div>
       </div>
       <div
-        class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden" id="mdtextpart"
+        class="bg-body mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden"
+        id="mdtextpart"
       >
         <div class="my-3 p-3">
           <h1 class="display-5">ChiangMai Foodie Guide</h1>
