--- a/pages4.html
+++ b/pages4.html
@@ -182,14 +182,14 @@
     
     <!-- ////////////////////////////////////////////////////////////////////////////////////// -->
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 animate__animated animate__fadeInUp animate__delay-1s" id="mdpart">
-      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden" id="mdimgpart">
+      <div class="bg-body mr-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden" id="mdimgpart">
         <div class="my-2 py-2">
           <h2 class="display-4">ข้าวซอยเนื้อ</h2>
           <img src="https://img.wongnai.com/p/1920x0/2023/04/22/153918c45a214741918e684f43922f0a.jpg">
         </div>
       </div>
       <div
-      class="bg-dark ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-white overflow-hidden"
+      class="bg-body ml-md-3 pt-3 px-3 pt-md-3 px-md-3 text-center text-body overflow-hidden"
       id="mdvideopart"
     >
       <div class="my-2 py-2">
