--- a/pages7.html
+++ b/pages7.html
@@ -30,6 +30,9 @@
         background: #fff;
         opacity: 0.8;
       }
+      #food {
+        -webkit-text-stroke: 1px black;
+      }
       .btn-light {
         -webkit-text-stroke: 0;
       }
@@ -124,14 +127,14 @@
                     >
                   </li>
                   <li>
-                    <a href="/pages6.html" class="nav-link px-2 link-danger"
+                    <a
+                      href="/pages6.html"
+                      class="nav-link px-2 link-body-emphasis"
                       >P6</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/pages7.html"
-                      class="nav-link px-2 link-body-emphasis"
+                    <a href="/pages7.html" class="nav-link px-2 link-danger"
                       >P7</a
                     >
                   </li>
@@ -161,17 +164,17 @@
     <div
       class="animate__animated animate__fadeInUp position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
       style="
-        background-image: url(https://img.wongnai.com/p/1920x0/2022/06/20/bde0f1a8df8b4625be6ab3d9aa6f2ba8.jpg);
+        background-image: url(https://img.wongnai.com/p/1600x0/2022/11/14/2f5668a414da45cf933ba2a93e06b651.jpg);
         background-size: cover;
         background-position: center;
       "
     >
       <div class="col-md-5 p-lg-5 mx-auto my-5" id="food">
-        <h1 class="display-2 font-weight-normal text-warning">โรตีนะนะ</h1>
-        <p class="display-4 font-weight-normal text-warning">Indian FOOD</p>
+        <h1 class="display-2 font-weight-normal text-light">ต๋องเต็มโต๊ะ</h1>
+        <p class="display-4 font-weight-normal text-light">Local FOOD</p>
         <a
-          class="btn btn-danger"
-          href="https://www.facebook.com/Rotinanachiangmai/"
+          class="btn btn-light"
+          href="https://www.facebook.com/TongTemToh/"
           target="_blank"
           >Contact</a
         >
@@ -192,9 +195,9 @@
         id="mdimgpart"
       >
         <div class="my-2 py-2">
-          <h2 class="display-4">โรตีกรอบมะพร้าวอ่อนฝอยทอง</h2>
+          <h2 class="display-4">ลาบหมูคั่ว</h2>
           <img
-            src="https://img.wongnai.com/p/1920x0/2022/02/14/4873a1583b6a4bdebc04d39f9477eca6.jpg"
+            src="https://img.wongnai.com/p/1920x0/2017/05/22/4f6a2c209ee34c2cbb1d7411f2c48d27.jpg"
           />
         </div>
       </div>
@@ -207,7 +210,7 @@
           <iframe
             width="100%"
             height="450"
-            src="https://www.youtube.com/embed/O9uYncKGdsQ?si=wODNl5mGisA2glW9"
+            src="https://www.youtube.com/embed/mYuXJVKqXOY?si=QIFmYlwbTM5_IRF7"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -222,17 +225,15 @@
         <div class="my-3 p-3">
           <h1 class="display-5">ChiangMai Foodie Guide</h1>
           <p class="lead">
-            - ร้านโรตีนะนะเชียงใหม่
-            เป็นร้านโรตีที่มีชื่อเสียงโด่งดังในจังหวัดเชียงใหม่
-            ตั้งอยู่ที่ถนนช้างเผือก ตำบลช้างเผือก อำเภอเมือง จังหวัดเชียงใหม่
-            เปิดให้บริการมาตั้งแต่ปี พ.ศ. 2562 โดยคุณสุพรรษา จันทร์สุข
-            เจ้าของร้านเล่าว่าจุดเริ่มต้นของร้านนี้มาจากการที่ลูกสาวของเธอชอบกินโรตี
-            และเธอเองก็อยากหารายได้เสริมหลังเลิกงาน จึงเปิดร้านโรตีเล็กๆ
-            แสนอบอุ่นเป็นธุรกิจของครอบครัวขึ้นมา
+            - ร้านต๋องเต็มโต๊ะ เป็นร้านอาหารเหนือชื่อดังที่เปิดมาตั้งแต่ปี พ.ศ.
+            2543 โดยคุณต๋อง บุญมาพร
+            เจ้าของร้านเล่าว่าจุดเริ่มต้นของร้านนี้มาจากการที่ตนเองชอบกินอาหารเหนือ
+            และอยากเปิดร้านอาหารเหนือที่รสชาติอร่อย ราคาไม่แพง
+            จึงเปิดร้านต๋องเต็มโต๊ะขึ้น
             <br />
-            - ร้านโรตีนะนะเชียงใหม่มีจุดเด่นอยู่ที่โรตีที่หนานุ่ม
-            หอมกลิ่นเนยแท้ๆ และไส้ที่หลากหลาย ทั้งไส้กล้วย ไส้ฝอยทอง ไส้ชาไทย
-            ไส้มะพร้าวอ่อน และไส้อื่นๆ อีกมากมาย
+            - และยังมีเมนูอาหารเหนืออีกมากมายให้เลือกสรร เช่น น้ำพริกอ่อง
+            น้ำพริกหนุ่ม แกงโฮะ แกงผักหวานไข่มดแดง เชียงดาผัดไข่ แกงขนุน
+            แกงคั่วเห็ดเผาะ เป็นต้น ราคาเริ่มต้นที่ 60 บาท
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <a href="#b0dy"
@@ -261,7 +262,7 @@
                 class="d-inline-flex align-items-center justify-content-center text-bg-dark fs-4 rounded-3"
               >
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.5129463133285!2d98.96984941144031!3d18.819846959889166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3b9c501b8fe1%3A0xe7f183ed9b9417e6!2z4LmC4Lij4LiV4Li14LiZ4Liw4LiZ4LiwIFJvdGlOYW5h!5e0!3m2!1sth!2sth!4v1703163372424!5m2!1sth!2sth"
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3777.0468556124956!2d98.9645891!3d18.7960651!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a628a7efc09%3A0xf5ab324f73da2d39!2z4LiV4LmL4Lit4LiH4LmA4LiV4LmH4Lih4LmC4LiV4LmK4LiwIOC4i-C4reC4oiAxMw!5e0!3m2!1sth!2sth!4v1706267933219!5m2!1sth!2sth"
                   width="100%"
                   height="550"
                   style="border: 0"
@@ -271,9 +272,16 @@
                 ></iframe>
               </div>
               <h4 class="fw-semibold mb-0">
-                ทุกวัน (วันพุธ,วันอาทิตย์ ปิดทำการ) 06:30-21:00 Tel.0934239293
+                ทุกวัน 8:00–23:00
+                <a
+                  href="https://m.facebook.com/story.php?story_fbid=3142567299122267&amp;id=143098029069224"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >จองโต๊ะที่นี่</a
+                >
                 <br />
-                1366 ตำบลช้างเผือก, อำเภอเมืองเชียงใหม่ เชียงใหม่ 50300
+                11 13 ถนนนิมมานเหมินท์ ตำบลสุเทพ, อำเภอเมืองเชียงใหม่ เชียงใหม่
+                50200
               </h4>
             </div>
           </div>
