--- a/pages9.html
+++ b/pages9.html
@@ -30,6 +30,9 @@
         background: #fff;
         opacity: 0.8;
       }
+      #food {
+        -webkit-text-stroke: 1px black;
+      }
       .btn-light {
         -webkit-text-stroke: 0;
       }
@@ -124,7 +127,9 @@
                     >
                   </li>
                   <li>
-                    <a href="/pages6.html" class="nav-link px-2 link-danger"
+                    <a
+                      href="/pages6.html"
+                      class="nav-link px-2 link-body-emphasis"
                       >P6</a
                     >
                   </li>
@@ -143,9 +148,7 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/pages9.html"
-                      class="nav-link px-2 link-body-emphasis"
+                    <a href="/pages9.html" class="nav-link px-2 link-danger"
                       >P9</a
                     >
                   </li>
