--- a/pages8.html
+++ b/pages8.html
@@ -30,6 +30,9 @@
         background: #fff;
         opacity: 0.8;
       }
+      #food {
+        -webkit-text-stroke: 1px black;
+      }
       .btn-light {
         -webkit-text-stroke: 0;
       }
@@ -124,7 +127,9 @@
                     >
                   </li>
                   <li>
-                    <a href="/pages6.html" class="nav-link px-2 link-danger"
+                    <a
+                      href="/pages6.html"
+                      class="nav-link px-2 link-body-emphasis"
                       >P6</a
                     >
                   </li>
@@ -136,9 +141,7 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/pages8.html"
-                      class="nav-link px-2 link-body-emphasis"
+                    <a href="/pages8.html" class="nav-link px-2 link-danger"
                       >P8</a
                     >
                   </li>
@@ -161,16 +164,18 @@
     <div
       class="animate__animated animate__fadeInUp position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
       style="
-        background-image: url(https://img.wongnai.com/p/1920x0/2022/06/20/bde0f1a8df8b4625be6ab3d9aa6f2ba8.jpg);
+        background-image: url(https://img.wongnai.com/p/1920x0/2022/12/06/973ff48515774dc8ae3a313a5d074ff9.jpg);
         background-size: cover;
         background-position: center;
       "
     >
       <div class="col-md-5 p-lg-5 mx-auto my-5" id="food">
-        <h1 class="display-2 font-weight-normal text-warning">โรตีนะนะ</h1>
-        <p class="display-4 font-weight-normal text-warning">Indian FOOD</p>
+        <h1 class="display-2 font-weight-normal text-danger">
+          หมูทอดดึกดำบรรพ์
+        </h1>
+        <p class="display-4 font-weight-normal text-danger">Local FOOD</p>
         <a
-          class="btn btn-danger"
+          class="btn btn-light"
           href="https://www.facebook.com/Rotinanachiangmai/"
           target="_blank"
           >Contact</a
